# OutreachAI

./: Dockerfile  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: database_agent.py  email_agent.py  evaluator_agent.py  research_agent.py  summary_agent.py
app/api/: routes.py
app/database/: crud.py  models.py  test_db.py
app/graph/: state.py  workflow.py
app/schemas/: company.py
app/services/: email_sender.py  llm_service.py  tavily_service.py
app/static/: index.html
